# Practice

./: CMakeLists.txt  main.cpp
Practice_num1/: CMakeLists.txt
Practice_num2/: CMakeLists.txt  main.cpp
Practice_num3/: CMakeLists.txt  main.cpp
Practice_num4/: CMakeLists.txt  main.cpp
Practice_num5/: CMakeLists.txt  main.cpp
Practice_num6/: CMakeLists.txt  main.cpp
Practice_num7/: CMakeLists.txt  main.cpp
Practice_num8/: CMakeLists.txt  main.cpp
Practice_num9/: CMakeLists.txt  main.cpp
Practice_num_10/: CMakeLists.txt  main.cpp
Practice_num_11/: CMakeLists.txt  main.cpp
Practice_num_12/: CMakeLists.txt  main.cpp
Practice_num_13/: CMakeLists.txt  main.cpp
Practice_num_14/: CMakeLists.txt  input.txt  main.cpp
Practice_num_15/: CMakeLists.txt  input.txt  main.cpp
Practice_num_16/: CMakeLists.txt  main.cpp
Practice_num_17/: CMakeLists.txt  main.cpp
build-Practice_num2-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Practice_num2-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-4ad9fc13ac2f71b00e78.json  cmakeFiles-v1-ca98dbcad32041710967.json  codemodel-v2-55876c441d6cd2d7fa3f.json  directory-.-Debug-30833243d527c53a3a6d.json  index-2023-07-17T06-53-51-0144.json  target-Practice_num2-Debug-8236e45151e489baa597.json  target-Practice_num2_autogen-Debug-0cda4a0be25f5d3ac110.json  target-Practice_num2_autogen_timestamp_deps-Debug-ca01ddf99ad7c51a2b47.json
build-Practice_num2-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
build-Practice_num2-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Practice_num2-Desktop_Qt_6_6_0_MSVC2019_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QCoreApplication.71A6EC803D427025.idx  __stddef_max_align_t.h.88508985F0252029.idx  adxintrin.h.24D1EEFA0E21087D.idx  algorithm.2C39CA996761FADD.idx  array.AFF59434E19181CB.idx  atomic.14559F22C1EEF7A4.idx  bmiintrin.h.9907D33E9D1E46B3.idx  cctype.D5D1C3C1CCD2338B.idx  cfloat.4F223A522A035C27.idx  chrono.AF1A9800CF5DDACF.idx  climits.441C2613A25A131A.idx  cmath.EFF7D9B50ACDFD4F.idx  concurrencysal.h.E72B28EC325F7F4B.idx  corecrt.h.112BF025E57753E0.idx  corecrt_memcpy_s.h.06140A86DB87F3C3.idx  corecrt_memory.h.0E91AE19B74EC5FF.idx  corecrt_search.h.06BC79B90945C894.idx  corecrt_wstring.h.DF69AE0251B168F1.idx  crtdbg.h.71DB84DE9B350B01.idx  crtdefs.h.BCCA561B32A45430.idx  cstddef.7A0EBCC873E76165.idx  cstdint.80BADBECF164C85D.idx  cstdio.7C82E07F34F4CF3C.idx  cstdlib.DD6790B1F776502F.idx  cstring.2DE79E23508A0877.idx  ctime.AC87537C8958FA27.idx  cwchar.4DBB9366BC0433D9.idx  eh.h.B93498DFCB187225.idx  emmintrin.h.BA9A46D77421E97F.idx  exception.CDDCB3CA013BEC10.idx  float.h.BAED601461A6D6E6.idx  functional.E444A1A456405876.idx  fxsrintrin.h.88D47BF46D91501A.idx  ia32intrin.h.4E27A4DE9C0FBB49.idx  immintrin.h.7EF237FF3424467F.idx  initializer_list.32AADA80DCE59147.idx  intrin.h.C7331888D6FB2BB5.idx  intrin0.h.BA6D257E1092FBA3.idx  (+178 more)
